# AI-FinCoach-C8-G12

./: .gitignore  02_CLAUDE_CODE_BUILD_PROMPT.md  CLAUDE.md  CNAME  FinCoach AI (standalone).html  README.md  render.yaml
backend/: main.py  pyproject.toml  railpack.toml  railway.json  requirements.txt
backend/app/: config.py  db.py  llm.py  logging_config.py  main.py  models.py  schemas.py
backend/app/agents/: _util.py  budget_agent.py  coach.py  data_agent.py  debt_agent.py  graph.py  savings_agent.py  state.py  synthesizer.py
backend/app/api/: analysis.py  budget.py  chat.py  dashboard.py  debt.py  documents.py  savings.py  transactions.py
backend/app/finance/: debt_math.py  metrics.py
backend/app/ingestion/: normalizer.py  parser.py
backend/app/rag/: indexer.py  retriever.py
backend/fincoach_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/logs/: llm.jsonl
backend/scripts/: generate_sample_data.py
backend/tests/: test_debt_math.py  test_health_aliases.py  test_injection.py  test_normalizer.py
backend/uploads/: 08f1bba509474136884316b98c1e3e90_credit_card_statement.csv  c3608067ff5e46369070b86b9b5e69d3_poisoned_note.txt  c51a6617c674485ebd193d168f4bf8aa_hdfc_statement_6m.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/hooks/: useApi.ts  useKeyboardOpen.ts  useMediaQuery.ts  useSSE.ts  useToast.ts
frontend/src/lib/: api.ts  format.ts  markdown.ts  sse.ts
frontend/src/pages/: BudgetPage.tsx  CoachChatPage.tsx  DashboardPage.tsx  DebtPlannerPage.tsx  (+5 more)
(+42 files in other folders)
